# pytest-fixture-forms

./: .gitignore  CHANGELOG.md  README.md  hello.py  pyproject.toml  tox.ini
.github/workflows/: publish.yml
archive/: FixtureFormsRegistry.py  tmp.py  tmp2.py
src/pytest_fixture_forms/: CustomModule.py  FixtureForms.py  __init__.py  helpers.py  hooks.py  newhooks.py  runtime.py  utils.py
testing/: FixtureForms.py  conftest.py  tmp.py
testing/core/: test_FixtureForms.py  test_combinations.py  test_edge.py  test_extending_FixtureForms.py  test_extending_form_prototype.py  test_tmp.py  test_weird_parameterization.py
testing/extending_FixtureForms/: conftest.py  test_extending_FixtureForms.py
